// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paypal ExtraInfo 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 100.3,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Pay,ExtraInfo",
            "Name": "paypal",
            "Parameters": [
              {
                "Name": "Street1",
                "Value": "Hoofdstraat",
              },
              {
                "Name": "PostalCode",
                "Value": "8441ER",
              },
              {
                "Name": "CityName",
                "Value": "Heerenveen",
              },
              {
                "Name": "StateOrProvince",
                "Value": "Friesland",
              },
              {
                "Name": "Country",
                "Value": "NL",
              },
              {
                "Name": "Street2",
                "Value": "Street 2",
              },
              {
                "Name": "Name",
                "Value": "Test Acceptatie",
              },
              {
                "Name": "Phone",
                "Value": "0612345678",
              },
              {
                "Name": "NoShipping",
                "Value": "0",
              },
              {
                "Name": "AddressOverride",
                "Value": false,
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`Paypal Pay 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 100.3,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Pay",
            "Name": "paypal",
            "Parameters": [],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`Paypal Refund 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountCredit": 0.01,
      "Currency": "EUR",
      "Description": "Buckaroo Node SDK Refund Transaction Test",
      "Invoice": "64752550bf1f40",
      "OriginalTransactionKey": "EAD916B7D6544568A02B40B88F9207F6",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Refund",
            "Name": "paypal",
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`payRecurrent builds the PayRecurring request 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 10,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "OriginalTransactionKey": "test-original",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "PayRecurring",
            "Name": "paypal",
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;
